src/test/deca/context/valid/class/37_returnSousType.deca
// Description:
//    Déclaration d'une fonction A mais avec return B avec A fille de B
//


class A {}

class B extends A {
	A a() {
		return new B();
	}
}

{
}
