src/test/deca/context/invalid/class/36_wrong_type2.deca
// Description:
//    Déclaration d'une fonction int mais avec return float
//
// Resultats:
//    cannot cast float to int


class A {
	int a() {
		return float;
	}
}

{
}

